[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/splash.png" type="Texture" id=1]
[ext_resource path="res://code/ui/components/scripts/splash.gd" type="Script" id=2]

[node name="Splash" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
color = Color( 0.278431, 0.321569, 0.768627, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -181.0 ]
}

[node name="Logo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 256, 512 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Tween" type="Tween" parent="Logo"]

[node name="TweenS" type="Tween" parent="Logo"]

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_all_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]
